# project-1-ftp

./: README.md
.github/workflows/: cmake-ctest-client.yml
For Students/: Presentation.pptx
client/src/: CMakeLists.txt
client/src/core/: CMakeLists.txt
client/src/core/user_protocol_interpreter/: CMakeLists.txt
client/src/core/user_protocol_interpreter/ftp_command/: CMakeLists.txt  ftp_command.cc  ftp_command.h  test_ftp_command.cc
client/src/core/user_protocol_interpreter/ftp_command/ftp_command_argument/: CMakeLists.txt  ftp_command_argument.cc  ftp_command_argument.h
client/src/core/user_protocol_interpreter/ftp_command/ftp_command_code/: CMakeLists.txt  ftp_command_code.cc  ftp_command_code.h  ftp_command_code_private_enum_to_description.cc  ftp_command_code_private_enum_to_description.h  ftp_command_code_private_enum_to_rfc.cc  ftp_command_code_private_enum_to_rfc.h  ftp_command_code_private_enum_to_string.cc  ftp_command_code_private_enum_to_string.h  ftp_command_code_private_string_to_enum.cc  ftp_command_code_private_string_to_enum.h  test_ftp_command_code.cc
client/src/core/user_protocol_interpreter/ftp_reply/: CMakeLists.txt
client/src/core/user_protocol_interpreter/ftp_reply/ftp_reply_code/: CMakeLists.txt  ftp_reply_code.cc  ftp_reply_code.h  ftp_reply_code_private_code_to_explanation.cc  ftp_reply_code_private_code_to_explanation.h  test_ftp_reply_code.cc
client/src/core/user_protocol_interpreter/ftp_reply/ftp_reply_text/: CMakeLists.txt  ftp_reply_text.cc  ftp_reply_text.h
client/src/gui/: CMakeLists.txt  main.cc
client/src/gui/main_window/: main_window.cc  main_window.h
udp/src/: Makefile  client.cc  server.cc
